fixed rendering and scrolling issues

--- a/rune-wiki/themes/homebrewery/static/css/custom.css
+++ b/rune-wiki/themes/homebrewery/static/css/custom.css
@@ -5,4 +5,11 @@
 .phb {
     width: 100%;
     height: auto;
+    column-fill: balance !important;
+    overflow: scroll !important;
+}
+
+.phb code {
+    font-weight: bold !important;
+    visibility: visible !important;
 }
