--- a/rune-wiki/themes/homebrewery/layouts/_partials/head.html
+++ b/rune-wiki/themes/homebrewery/layouts/_partials/head.html
@@ -3,3 +3,9 @@
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
+{{ if .Params.columns }}
+<style>
+    :root { --page-columns: {{ .Params.columns }}; }
+    .phb { column-count: var(--page-columns); }
+</style>
+{{ end }}
